Fix color contrast ratio on posts contents

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -124,14 +124,17 @@ body {
 .card-title .card-text {
     font-weight:300;
     font-size: 16px;
+    color:#000;
 }
 
 .card-title:hover {
     color: #212529;
 }
 
-.card-created-date {
+.image-container .card-title .card-created-date {
     font-size: 12px;
+    color:#000;
+    font-weight: 300;
 }
 
 .card-created-date i {
